data/forge_javadoc/1.9.4/processed/net_minecraft_client_shader_ShaderUniform.md
# ShaderUniform

## Class signature

```java
public class ShaderUniform extends java.lang.Object
```

## Constructors

- `public ShaderUniform(java.lang.String name, int type, int count, ShaderManager manager)`

## Methods

- `public static int parseType(java.lang.String typeName)`
- `public void setUniformLocation(int uniformLocationIn)`
- `public java.lang.String getShaderName()`
- `public void set(float p_148090_1_)`
- `public void set(float p_148087_1_, float p_148087_2_)`
- `public void set(float p_148095_1_, float p_148095_2_, float p_148095_3_)`
- `public void set(float p_148081_1_, float p_148081_2_, float p_148081_3_, float p_148081_4_)`
- `public void setSafe(float p_148092_1_, float p_148092_2_, float p_148092_3_, float p_148092_4_)`
- `public void set(int p_148083_1_, int p_148083_2_, int p_148083_3_, int p_148083_4_)`
- `public void set(float[] p_148097_1_)`
- `public void set(float m00, float m01, float m02, float m03, float m10, float m11, float m12, float m13, float m20, float m21, float m22, float m23, float m30, float m31, float m32, float m33)`
- `public void set(org.lwjgl.util.vector.Matrix4f matrix)`
- `public void upload()`